--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     image: ghcr.io/snailyp/gemini-balance:latest
     container_name: gemini-balance
     restart: unless-stopped
+     ports:
+      # Thay đổi cổng HOST từ 8000 sang 8001 (Host Port : Container Port)
+      - "8010:8000"
     env_file:
       - .env
     depends_on:
